# ccda-to-fhir

./: .gitignore  .pre-commit-config.yaml  CERNER_TEST_COVERAGE_ANALYSIS.md  COMPLIANCE_ISSUES.md  FIXES_AND_ENHANCEMENTS.md  FIXES_NEEDED.md  PRODUCTION_READINESS_REPORT.md  README.md  REFACTORING_PLAN.md  STANDARDS_COMPLIANCE_REVIEW.md  TEST_COVERAGE_REALITY.md  VALIDATION_IMPLEMENTATION_PLAN.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
ccda_to_fhir/: __init__.py  constants.py  convert.py  exceptions.py  id_generator.py  logging_config.py  profiling.py  template_registry.py  types.py  validation.py
ccda_to_fhir/ccda/: parser.py
ccda_to_fhir/converters/: __init__.py  allergy_intolerance.py  appointment.py  author_extractor.py  author_references.py  base.py  base_extractor.py  bundle.py  careplan.py  careteam.py  code_systems.py  composition.py  condition.py  coverage.py  device.py  diagnostic_report.py  document_reference.py  encounter.py  encounter_diagnosis_notes.py  goal.py  immunization.py  informant_extractor.py  location.py  medication.py  medication_dispense.py  medication_request.py  medication_statement.py  narrative_section.py  note_activity.py  observation.py  organization.py  patient.py  practitioner.py  practitioner_role.py  procedure.py  provenance.py  references.py  referral.py  related_person.py  section_processor.py  (+2 more)
ccda_to_fhir/utils/: __init__.py  struc_doc_utils.py  terminology.py  udi_parser.py
docs/: MISSING_MAPPINGS.md  REFACTORING_PLAN.md  TODO-fix-broken-references.md  c-cda-fhir-compliance-plan.md  implementation-plan.md  implementation-status.md  parser-implementation-summary.md  parser-quick-start.md  parser-remaining-work.md  why_diagnosis_role_always_ad.md
docs/ccda/: clinical-document.md
docs/design/: loinc-classtype-fetcher.md  medical-code-enrichment.md  strucdoctext-implementation.md
docs/fhir/: document-reference.md  document_reference.md
docs/mapping/: 00-overview.md  03-allergy-intolerance.md  07-medication-request.md  08-encounter.md  09-participations.md  11-social-history.md  14-careplan.md  16-location.md  26-document-reference.md  known-issues.md  terminology-maps.md
docs/testing/: e2e-test-enhancement-plan.md  future-enhancements.md  phase1-issues-found.md
stress_test/: BUG-001_FIXED.md  BUG-001_VERIFICATION.md  BUG-002_FIXED.md  BUG-004_FIXED.md  BUGS_AND_ISSUES.md  CONDITION_CODES_INVESTIGATION.md  E2E_COMPLETION_SUMMARY.md  E2E_MAPPING_COVERAGE.md  E2E_TEST_FINDINGS.md  ERROR_REPORT.md  ERROR_SUMMARY.md  PARSER_FIXES_TODO.md  QUALITY_REPORT.md  README.md  RESOURCE_INVENTORY.md  STRESS_TEST_GUIDE.md  STRESS_TEST_REPORT.md  analyze_results.py  condition_codes_analysis.json  expected_failures.json  filter_real_issues.py  investigate_condition_codes.py  investigate_missing_codes.py  quality_analysis.py  stress_test.py  stress_test_50_samples.json  stress_test_all_samples.json  stress_test_onc_100.json  stress_test_onc_200.json  stress_test_results.json  stress_test_results_complete.json  stress_test_results_final.json  stress_test_results_fixed.json  stress_test_results_no_fragments.json  test_fixtures_stress.py
tests/: conftest.py
tests/integration/: comprehensive_validator.py  conftest.py  test_agastha_e2e_detailed.py  test_allergy.py  test_appointment_simple.py  test_athena_ccd.py  test_athena_comprehensive.py  test_athena_e2e_detailed.py  test_athena_fixes_78_81.py  test_author_display.py  test_careplan_simple.py  test_careplan_with_outcomes.py  test_careteam.py  test_ccda_document_validation.py  test_cerner_comprehensive.py  test_cerner_e2e_detailed.py  test_clinical_reference_display.py  test_co_in_observation.py  test_composition.py  test_composition_date_fallback.py  test_composition_resource_type.py  test_converter.py  test_coverage.py  (+61 more)
(+99 files in other folders)
